--- a/2023/04/09.md
+++ b/2023/04/09.md
@@ -60,7 +60,7 @@ class PaymentRepositoryTest {
 }
 ```
 
-# 깨달은 
+# persist, flush, commit 에 
 
 처음에는 영속성 컨텍스트를 flush/clear 하지 않고, paymentRepository로 계속 조회하면서 테스트 코드가 실패하였다.
 
