--- a/2023/04/09.md
+++ b/2023/04/09.md
@@ -64,9 +64,9 @@ class PaymentRepositoryTest {
 
 처음에는 영속성 컨텍스트를 flush/clear 하지 않고, paymentRepository로 계속 조회하면서 테스트 코드가 실패하였다.
 
-이후 원인을 찾으면서 깨달았는데, paymentRepository.save(payment) 메소드는 엔티티 매니저의 persist를 실행한다.
-이떄 persist는 DB에 직접적으로 커밋하는 것이 아니기 때문에 memberRepository.findUserById(memberId)로 조회를 해봐도
-빈 arrayList가 반환되었다.
+이후 원인을 찾으면서 깨달았는데, paymentRepository.save(payment) 메소드는 엔티티 매니저의 persist를 실행한다. <br>
+이떄 persist는 DB에 직접적으로 커밋하는 것이 아니기 때문에,<br> 
+memberRepository.findUserById(memberId)로 조회를 해봐도 빈 arrayList가 반환되었다.
 
 따라서, 영속성 컨텍스트의 내용을 DB에 반영 후, 영속성 컨텍스트를 초기화 한 다음 조회해야 한다.
 
