--- a/2023/04/09.md
+++ b/2023/04/09.md
@@ -70,3 +70,12 @@ memberRepository.findUserById(memberId)로 조회를 해봐도 빈 arrayList가 
 
 따라서, 영속성 컨텍스트의 내용을 DB에 반영 후, 영속성 컨텍스트를 초기화 한 다음 조회해야 한다.
 
+# @PersistenceContext
+
+@PersistenceContext 어노테이션은 스프링이 엔티티 매니저를 주입하도록 하는 어노테이션이다.
+이 떄 생성된 엔티티 매니저는 스프링의 트랜잭션 관리 기능을 사용하며, <br>
+해당 트랜잭션에 대한 영속성 컨텍스트(Persistence Context)를 생성한다.
+
+주의할 점은 엔티티 매니저 사용 시 트랜잭션이 없다면 단순히 스프링 빈으로서 동작하며
+데이터베이스에 값이 저장되지 않는다.
+
